boton de subir y certificacion 2008

--- a/index.html
+++ b/index.html
@@ -10590,7 +10590,7 @@
                                     class="ct-text-editor elementor-clearfix"
                                   >
                                     <p>
-                                      <span class="ct-year">2022</span> © All
+                                      <span class="ct-year">2008</span> © All
                                       rights reserved
                                     </p>
                                   </div>
@@ -10606,9 +10606,9 @@
               </div>
             </div>
           </div>
-          <span class="ct-footer-year">2024</span>
+          <span class="ct-footer-year">2008</span>
         </footer>
-        <a href="#" class="scroll-top"
+        <a href="#" class="scroll-top" style="bottom: 100px;"
           ><i class="zmdi zmdi-long-arrow-up"></i
         ></a>
       </div>
@@ -10786,9 +10786,10 @@
         class="joinchat joinchat--right"
         data-settings='{"telephone":"573203986077","mobile_only":false,"button_delay":2,"whatsapp_web":false,"qr":false,"message_views":1,"message_delay":7,"message_badge":false,"message_send":"Hola Soy la Maestra Lucinda!!!\nRecibe Tu Consulta GRATIS,\nNo lo Dudes Escríbeme Ahora","message_hash":"88f6a05e"}'
       >
+     
         <div class="joinchat__button">
-          <div class="joinchat__button__open"></div>
-          <div class="joinchat__button__sendtext">Abrir Chat Whatsapp</div>
+          <div class="joinchat__button__open" ></div>
+          <div class="joinchat__button__sendtext" >Abrir Chat Whatsapp</div>
           <svg
             class="joinchat__button__send"
             width="60"
@@ -10829,8 +10830,7 @@
             <div class="joinchat__box__content">
               <div class="joinchat__message">
                 Hola Soy la Maestra Lucinda!!!<br />Recibe Tu Consulta Gratis
-                Ahora,<br />Trabajos Garantizados o Devuelvo tu Dinero<br />No
-                lo Dudes Escríbeme Ahora
+                Ahora,<br />Trabajos Garantizados o Devuelvo tu Dinero
               </div>
             </div>
           </div>
