--- a/index.html
+++ b/index.html
@@ -8087,7 +8087,7 @@
 
       <div
         class="joinchat joinchat--right"
-        data-settings='{"telephone":"526561961105","mobile_only":false,"button_delay":2,"whatsapp_web":false,"qr":false,"message_views":1,"message_delay":7,"message_badge":false,"message_send":"Hola Soy el maestro ISMAEL!!!\nRecibe Tu Consulta GRATIS,\nNo lo Dudes Escríbeme Ahora","message_hash":"88f6a05e"}'
+        data-settings='{"telephone":"526561961105","mobile_only":false,"button_delay":2,"whatsapp_web":false,"qr":false,"message_views":1,"message_delay":7,"message_badge":false,"message_send":"Hola Soy el maestro ISMAEL!!!\nRecibe Tu Consulta GRATIS,\nobten los Resultados que estas esperando.\nNo lo Dudes mas..🇲🇽","message_hash":"88f6a05e"}'
       >
      
         <div class="joinchat__button">
@@ -8132,8 +8132,8 @@
           <div class="joinchat__box__scroll">
             <div class="joinchat__box__content">
               <div class="joinchat__message">
-                Hola Soy el maestro ISMAEL<br />Recibe Tu Consulta Gratis
-                Ahora,<br />Trabajos Garantizados o Devuelvo tu Dinero
+                Hola Soy el maestro ISMAEL!!! <br>nRecibe Tu Consulta GRATIS,<br>obten los Resultados que estas esperando. <br>
+                 No lo Dudes mas..🇲🇽
               </div>
             </div>
           </div>
