--- a/index.html
+++ b/index.html
@@ -7143,7 +7143,7 @@
                                           data-wow-delay="ms"
                                         >
                                           <span class="sp-main">
-                                            ¿NO PUEDE ENCONTRAR UNA RESPUESTA A AL PROBLEMA QUE LO ATORMENTA? CON MI AYUDA LE BRINDARE UNA SOLUCION INMEDIATA.
+                                            ¿NO PUEDE ENCONTRAR UNA RESPUESTA AL PROBLEMA QUE LO ATORMENTA? CON MI AYUDA LE BRINDARE UNA SOLUCION INMEDIATA.
                                           </span>
                                         </h3>
                                       </div>
