--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           document.documentElement.className + " yes-js js_active js";
       </script>
       <title>
-        jorge &#8211; Amarres de Amor y Brujeria de Parejas en Horas, Brujos
+        El templo de sanacion del maestro ISMAEL &#8211; Amarres de Amor y Brujeria de Parejas en Horas, Brujos
         Poderosos de Amarres de Amor en Mexico
       </title>
       <meta name="robots" content="max-image-preview:large" />
